k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pulsebox
  namespace: pulsebox
  labels:
    app.kubernetes.io/name: pulsebox
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pulsebox
  ports:
    - name: metrics
      port: 8037
      targetPort: metrics
    - name: http
      port: 8080
      targetPort: http
